--- a/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
+++ b/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
+             <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
