--- a/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
+++ b/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
@@ -69,7 +69,7 @@
              <distributionManagement>
     <repository>
         <id>nexus</id>
-        <url>https://nexus.example.com/repository/your-repo/</url>
+        <url>http://192.168.184.128:8081/repository/devospprojet/</url>
     </repository>
 </distributionManagement>
 
