--- a/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
+++ b/DevOps_Project-20231016T100739Z-001/DevOps_Project/pom.xml
@@ -68,7 +68,7 @@
          
              <distributionManagement>
     <repository>
-        <id>nexus</id>
+        <id>deploymentRep</id>
         <url>http://192.168.184.128:8081/repository/devospprojet/</url>
     </repository>
 </distributionManagement>
