--- a/DevOps_Project-20231016T100739Z-001/DevOps_Project/Dockerfile
+++ b/DevOps_Project-20231016T100739Z-001/DevOps_Project/Dockerfile
@@ -1,1 +1,7 @@
 
+# Use an official Java runtime as a parent image
+FROM openjdk:8
+EXPOSE 8082
+ADD target/DevOps_Project-1.0.jar DevOps_Project-1.0.jar
+ENTRYPOINT ["java","-jar","/DevOps_Project-1.0.jar"]
+
