--- a/DevOps_Project_Front-20231016T100741Z-001(1)/DevOps_Project_Front/Dockerfile
+++ b/DevOps_Project_Front-20231016T100741Z-001(1)/DevOps_Project_Front/Dockerfile
@@ -1,1 +1,12 @@
 
+# Use an official Node.js runtime as a parent image
+FROM node:16 as build
+WORKDIR /front
+COPY package.json package-lock.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+# Stage 2: Serve the application using Nginx
+FROM nginx:alpine
+COPY --from=build /frontend/dist/summer-workshop-angular /usr/share/nginx/html
